fixed: 1) playlist remove in home page, 2) item public_id retrieval (by global js var, formerly by url address) 3) json mathod in markers (now they all call global function json), 4)restored red pointer in the player to fit the overall page color (now it's just a little lighter to contrast with the markers) 5)reduced padding in marker divs (still minor alignment problems though) 6) added icon add_to_playlist in the div marker (still to be bound to an event, which needs to change the implementation of loading the playlist from django)

--- a/telemeta/htdocs/css/telemeta.css
+++ b/telemeta/htdocs/css/telemeta.css
@@ -924,7 +924,7 @@ a.image-link {
     font-style: italic;
 }
 .markersdivTopElement{
-    /*vertical-align:middle;*/
+   /* vertical-align:middle;*/
 }
 .markersdivTitle{
     font-weight:bold;
@@ -955,13 +955,21 @@ a.image-link {
 .markersdivEdit span{
     position:absolute;top:-0.75ex;left:3ex;
 }
-.markersdivDelete{
+.markersdivDelete, .markersdivAddPlaylist{
     border:0px;
     float:right;
     background-image: url('/images/del_marker.png');
     background-repeat: no-repeat;
     background-position: top center;
-    padding:1ex 1ex 1ex 1ex;/*top right bottom left. The padding is only to show the element */
+    /*padding:1ex 1ex 1ex 1ex; top right bottom left. The padding is only to show the element */
+    width: 15px;
+    height:15px;
+}
+.markersdivDelete{
+    background-image: url('/images/del_marker.png');
+}
+.markersdivAddPlaylist{
+    background-image: url('/images/add_playlist_marker.png');
 }
 .markersdivDescription{
     margin:0ex 0px 0ex 0px; /*top right bottom left*/
@@ -974,10 +982,13 @@ a.image-link {
     background-color: #087714;
     color: #fff;
     font-weight: bold;
-    padding: 0.3em 0.8em 0.3em 0.8em;
-    padding:5px 10px 5px 26px;
+    /*padding: 0.3em 0.8em 0.3em 0.8em;
+    padding:5px 10px 5px 26px;*/
+    display:block;
+    width: 4ex;
+    padding: 1ex .5ex 1ex 3.5ex;
     background-repeat: no-repeat;
-    background-position: 1ex .5ex;
+    background-position: 1ex 1ex;
     -moz-border-radius: 1ex 1ex 1ex 1ex;
     -webkit-border-radius: 1ex 1ex 1ex 1ex;
     border-radius: 1ex 1ex 1ex 1ex;
